// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupedStandings > renders empty groups 1`] = `
"<div class="px-4 sm:px-0">
  <div class="mb-8">
    <h3 class="text-xl font-bold mb-2 text-center text-white">Empty Group</h3>
    <div class="w-full sm:w-4/5 sm:mx-auto overflow-x-auto -mx-4 sm:mx-0 px-4 sm:px-0">
      <table class="w-full text-white table-fixed min-w-[900px]">
        <thead>
          <tr class="text-sm">
            <th class="w-10 px-1 py-2">#</th>
            <th class="w-12 px-1 py-2">Team</th>
            <!--v-if-->
            <!--v-if-->
            <th class="w-10 px-1 py-2">GP</th>
            <th class="w-10 px-1 py-2">W</th>
            <th class="w-10 px-1 py-2">L</th>
            <th class="w-10 px-1 py-2">OTL</th>
            <th class="w-10 px-1 py-2">PTS</th>
            <th class="w-10 px-1 py-2">ROW</th>
            <th class="w-10 px-1 py-2">GF</th>
            <th class="w-10 px-1 py-2">GA</th>
            <th class="w-10 px-1 py-2">Diff</th>
            <th class="w-16 px-1 py-2">Home</th>
            <th class="w-16 px-1 py-2">Away</th>
            <th class="w-14 px-1 py-2">L10</th>
            <th class="w-12 px-1 py-2">Streak</th>
          </tr>
        </thead>
        <tbody></tbody>
      </table>
    </div>
  </div>
</div>"
`;

exports[`GroupedStandings > renders group sections 1`] = `
"<div class="px-4 sm:px-0">
  <div class="mb-8">
    <h3 class="text-xl font-bold mb-2 text-center text-white">Eastern Conference</h3>
    <div class="w-full sm:w-4/5 sm:mx-auto overflow-x-auto -mx-4 sm:mx-0 px-4 sm:px-0">
      <table class="w-full text-white table-fixed min-w-[900px]">
        <thead>
          <tr class="text-sm">
            <th class="w-10 px-1 py-2">#</th>
            <th class="w-12 px-1 py-2">Team</th>
            <!--v-if-->
            <!--v-if-->
            <th class="w-10 px-1 py-2">GP</th>
            <th class="w-10 px-1 py-2">W</th>
            <th class="w-10 px-1 py-2">L</th>
            <th class="w-10 px-1 py-2">OTL</th>
            <th class="w-10 px-1 py-2">PTS</th>
            <th class="w-10 px-1 py-2">ROW</th>
            <th class="w-10 px-1 py-2">GF</th>
            <th class="w-10 px-1 py-2">GA</th>
            <th class="w-10 px-1 py-2">Diff</th>
            <th class="w-16 px-1 py-2">Home</th>
            <th class="w-16 px-1 py-2">Away</th>
            <th class="w-14 px-1 py-2">L10</th>
            <th class="w-12 px-1 py-2">Streak</th>
          </tr>
        </thead>
        <tbody>
          <tr class="even:bg-zinc-600 text-center text-sm">
            <td class="px-1 py-2" style="background: #b9112d; color: white;">1</td>
            <td class="w-12 px-1 py-2"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
            <!--v-if-->
            <!--v-if-->
            <td class="px-1 py-2">50</td>
            <td class="px-1 py-2">30</td>
            <td class="px-1 py-2">15</td>
            <td class="px-1 py-2">5</td>
            <td class="font-bold px-1 py-2">65</td>
            <td class="px-1 py-2">28</td>
            <td class="px-1 py-2">150</td>
            <td class="px-1 py-2">120</td>
            <td class="px-1 py-2">+30</td>
            <td class="px-1 py-2">15-5-5</td>
            <td class="px-1 py-2">15-10-0</td>
            <td class="px-1 py-2">7-3-0</td>
            <td class="px-1 py-2">W3</td>
          </tr>
          <tr class="even:bg-zinc-600 text-center text-sm">
            <td class="px-1 py-2" style="background: #b9112d; color: white;">2</td>
            <td class="w-12 px-1 py-2"><a href="/player-stats/MTL" class="flex justify-center"><img src="/logos/SVG/MTL.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Montreal Canadiens" title="Montreal Canadiens"></a></td>
            <!--v-if-->
            <!--v-if-->
            <td class="px-1 py-2">50</td>
            <td class="px-1 py-2">30</td>
            <td class="px-1 py-2">15</td>
            <td class="px-1 py-2">5</td>
            <td class="font-bold px-1 py-2">65</td>
            <td class="px-1 py-2">28</td>
            <td class="px-1 py-2">150</td>
            <td class="px-1 py-2">120</td>
            <td class="px-1 py-2">+30</td>
            <td class="px-1 py-2">15-5-5</td>
            <td class="px-1 py-2">15-10-0</td>
            <td class="px-1 py-2">7-3-0</td>
            <td class="px-1 py-2">W3</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="mb-8">
    <h3 class="text-xl font-bold mb-2 text-center text-white">Western Conference</h3>
    <div class="w-full sm:w-4/5 sm:mx-auto overflow-x-auto -mx-4 sm:mx-0 px-4 sm:px-0">
      <table class="w-full text-white table-fixed min-w-[900px]">
        <thead>
          <tr class="text-sm">
            <th class="w-10 px-1 py-2">#</th>
            <th class="w-12 px-1 py-2">Team</th>
            <!--v-if-->
            <!--v-if-->
            <th class="w-10 px-1 py-2">GP</th>
            <th class="w-10 px-1 py-2">W</th>
            <th class="w-10 px-1 py-2">L</th>
            <th class="w-10 px-1 py-2">OTL</th>
            <th class="w-10 px-1 py-2">PTS</th>
            <th class="w-10 px-1 py-2">ROW</th>
            <th class="w-10 px-1 py-2">GF</th>
            <th class="w-10 px-1 py-2">GA</th>
            <th class="w-10 px-1 py-2">Diff</th>
            <th class="w-16 px-1 py-2">Home</th>
            <th class="w-16 px-1 py-2">Away</th>
            <th class="w-14 px-1 py-2">L10</th>
            <th class="w-12 px-1 py-2">Streak</th>
          </tr>
        </thead>
        <tbody>
          <tr class="even:bg-zinc-600 text-center text-sm">
            <td class="px-1 py-2" style="background: #003872; color: white;">1</td>
            <td class="w-12 px-1 py-2"><a href="/player-stats/VGK" class="flex justify-center"><img src="/logos/SVG/VGK.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Vegas Golden Knights" title="Vegas Golden Knights"></a></td>
            <!--v-if-->
            <!--v-if-->
            <td class="px-1 py-2">50</td>
            <td class="px-1 py-2">30</td>
            <td class="px-1 py-2">15</td>
            <td class="px-1 py-2">5</td>
            <td class="font-bold px-1 py-2">65</td>
            <td class="px-1 py-2">28</td>
            <td class="px-1 py-2">150</td>
            <td class="px-1 py-2">120</td>
            <td class="px-1 py-2">+30</td>
            <td class="px-1 py-2">15-5-5</td>
            <td class="px-1 py-2">15-10-0</td>
            <td class="px-1 py-2">7-3-0</td>
            <td class="px-1 py-2">W3</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>"
`;

exports[`GroupedStandings > renders with division column 1`] = `
"<div class="px-4 sm:px-0">
  <div class="mb-8">
    <h3 class="text-xl font-bold mb-2 text-center text-white">Division Group</h3>
    <div class="w-full sm:w-4/5 sm:mx-auto overflow-x-auto -mx-4 sm:mx-0 px-4 sm:px-0">
      <table class="w-full text-white table-fixed min-w-[900px]">
        <thead>
          <tr class="text-sm">
            <th class="w-10 px-1 py-2">#</th>
            <th class="w-12 px-1 py-2">Team</th>
            <th class="w-16 px-1 py-2">Division</th>
            <!--v-if-->
            <th class="w-10 px-1 py-2">GP</th>
            <th class="w-10 px-1 py-2">W</th>
            <th class="w-10 px-1 py-2">L</th>
            <th class="w-10 px-1 py-2">OTL</th>
            <th class="w-10 px-1 py-2">PTS</th>
            <th class="w-10 px-1 py-2">ROW</th>
            <th class="w-10 px-1 py-2">GF</th>
            <th class="w-10 px-1 py-2">GA</th>
            <th class="w-10 px-1 py-2">Diff</th>
            <th class="w-16 px-1 py-2">Home</th>
            <th class="w-16 px-1 py-2">Away</th>
            <th class="w-14 px-1 py-2">L10</th>
            <th class="w-12 px-1 py-2">Streak</th>
          </tr>
        </thead>
        <tbody>
          <tr class="even:bg-zinc-600 text-center text-sm">
            <td class="px-1 py-2" style="background: #b9112d; color: white;">1</td>
            <td class="w-12 px-1 py-2"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
            <td class="px-1 py-2">ATLANTIC</td>
            <!--v-if-->
            <td class="px-1 py-2">50</td>
            <td class="px-1 py-2">30</td>
            <td class="px-1 py-2">15</td>
            <td class="px-1 py-2">5</td>
            <td class="font-bold px-1 py-2">65</td>
            <td class="px-1 py-2">28</td>
            <td class="px-1 py-2">150</td>
            <td class="px-1 py-2">120</td>
            <td class="px-1 py-2">+30</td>
            <td class="px-1 py-2">15-5-5</td>
            <td class="px-1 py-2">15-10-0</td>
            <td class="px-1 py-2">7-3-0</td>
            <td class="px-1 py-2">W3</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>"
`;
